--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Install npm dependencies
-      run: npm ci    
+    - run: npm ci    
     - name: serverless deploy
       uses: serverless/github-action@v3.1
       with:
