--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,24 +13,22 @@ jobs:
       matrix:
         node-version: [16.x]
     steps:
-    #Using versioned actions 
-      - uses: actions/checkout@v2  # --> Reference a specific version
-      - uses: actions/setup-node@v2 # --> To Setup the Server With Node Env
-        with:  
-          node-version: '14' #--> Specify the Version of the Node 
-      - name: Configure AWS Credentials  
-        uses: aws-actions/configure-aws-credentials@v1 #--> Setup the Credential for the AWS cli
+      - name: Checkout to repo
+        uses: actions/checkout@v2
+
+      - name: Setup node environment
+        uses: actions/setup-node@v1
         with:
-        # Created the Secrets Under the Repo only with These Variables
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} 
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1 #--> Define Region of the AWS-CLI 
-      - name: npm install
-        env:
-          CI: true
-        run: |
-          npm ci 
-      - name: deploy
-        run: |
-          zip -j deploy.zip ./*
-          aws lambda update-function-code --function-name=test --zip-file=fileb://deploy.zip 
+          node-version: '16.x'
+          
+      - name: Install serverless globally
+        run: npm install -g serverless
+      
+      - name: Configure serverless authentication
+        run: sls config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Install npm dependencies
+        run: npm ci
+     
+      - name: Deploy lambda function
+        run: sls deploy --stage dev
