--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.245.0"
+    "@aws-sdk/client-dynamodb": "^3.245.0",
+    "@aws-sdk/lib-dynamodb": "^3.245.0"
   },
-    "type": "module"
+  "type": "module"
 }
