--- a/serverless.yml
+++ b/serverless.yml
@@ -100,6 +100,16 @@ functions:
             claims:
               - email  
 
+Parameters:
+  HashKeyElementName:
+    Type: String
+    Default: id
+    Description: Hash Key Name
+  HashKeyElementType:
+    Type: String
+    Default: S
+    Description: Hash Key Type
+
 resources:
   Resources:
     PickmeUserPool:
@@ -125,3 +135,23 @@ resources:
         IdTokenValidity: 5
         ExplicitAuthFlows:
           - "ADMIN_NO_SRP_AUTH"
+
+    RestaurantTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: Restaurant
+        AttributeDefinitions:
+          - 
+            AttributeName: !Ref HashKeyElementName
+            AttributeType: !Ref HashKeyElementType
+        KeySchema:
+          - 
+            AttributeName: !Ref HashKeyElementName
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 5
+          WriteCapacityUnits: 5 
+    # Outputs:
+    #   Restaurant:
+    #     Description: Table Created using this template.
+    #     Value: !Ref RestaurantTable      
