--- a/serverless.yml
+++ b/serverless.yml
@@ -143,7 +143,7 @@ resources:
         AttributeDefinitions:
           - 
             AttributeName: restaurant_id
-            AttributeType: String
+            AttributeType: S
         KeySchema:
           - 
             AttributeName: restaurant_id
