--- a/serverless.yml
+++ b/serverless.yml
@@ -23,6 +23,7 @@ provider:
         - dynamodb:DescribeStream,
         - dynamodb:DescribeTable,
         - dynamodb:Get*,
+        - dynamodb:GetItem, 
         - dynamodb:Query,
         - dynamodb:Scan,
         - dynamodb:BatchWrite*,
