--- a/serverless.yml
+++ b/serverless.yml
@@ -20,7 +20,11 @@ provider:
     - Effect: Allow
       Action:
         - dynamodb:*
-      Resource: "*"  
+      Resource: "arn:aws:dynamodb:us-east-1:322898024499:table/Restaurant"
+    - Effect: Allow
+      Action:
+        - dynamodb:*
+      Resource: "arn:aws:dynamodb:us-east-1:322898024499:table/Orders"     
 
 functions:
   loginUser:
