--- a/serverless.yml
+++ b/serverless.yml
@@ -73,6 +73,23 @@ functions:
             claims:
               - email
 
+  restaurantsDelete:
+    handler: src/restaurants/restaurants.handler
+    events:
+      - http:
+          path: /restaurants/{id}
+          method: delete
+          cors: true
+          authorizer:
+            name: pickmeUsersAuthorizer
+            type: COGNITO_USER_POOLS
+            arn:
+              Fn::GetAtt:
+                - PickmeUserPool
+                - Arn
+            claims:
+              - email
+
   ordersCreate:
     handler: src/order/order.handler
     events:
